Fix [ #315543 ] Regression: Autocomplete in XForms Controls example is truncated

--- a/src/resources-packaged/xbl/orbeon/autocomplete/autocomplete.css
+++ b/src/resources-packaged/xbl/orbeon/autocomplete/autocomplete.css
@@ -2,13 +2,15 @@
  * The structure of the HTML as seen by the browser can be summaries as follows:
  *
  *      div class="xbl-fr-autocomplete"
- *          div class="yui-ac"
+ *          div class="yui-ac"                                                              position: static (overrides YUI: relative, see comment below)
  *              span class="xforms-input"
- *                  input class="xforms-input-input"    Input in which users type
+ *                  input class="xforms-input-input"    Input in which users type           width: 140px, position: static (overrides YUI relative, see comment below)
  *              div class="xbl-fr-select1-button"       Component showing full itemset
- *              div class="yui-ac-container"
- *                  div class="yui-ac-content"          Suggestions, position: absolute
+ *              div class="yui-ac-container"                                                position: absolute
+ *                  div class="yui-ac-content"          Suggestions                         position: absolute, overflow: hidden, width: 140px
  *
+ *
+ * For testing, to keep the suggestion list open while interacting with Firefox, disabled the display: none on the <div class="yui-ac-content">.
  */
 
 /**
@@ -19,7 +21,6 @@
  */
 .xbl-fr-autocomplete .xforms-input-input { position: static; width: 140px }
 .xbl-fr-autocomplete .yui-ac { position: static }
-.xbl-fr-autocomplete .yui-ac-container { top: auto; position: static }
 .xbl-fr-autocomplete .yui-ac-content { width: 140px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box }
 
 /* Make the div that contains the text field inline-block so the component can be used in inline mode
